add route and view for wearestillcool app and iframe

--- a/views/wearestillcool.ejs
+++ b/views/wearestillcool.ejs
@@ -25,3 +25,62 @@
           </ul>
         </div>
       </nav>
+
+      <div id="block1" class="parallax-container">
+            <div class="parallax"><img src="bg.jpg"></div>
+        </div>
+    
+          <div id="block2" class="section white">
+                <iframe src="http://www.wearestillcool.com/" height="800" width="1200"></iframe>
+            <div class="row container">
+              </div>
+                <div class="col s12">
+
+
+
+                  <p id="about" class="grey-text text-darken-3 lighten-3">
+                  My name is Tyler Sweeney and I am a Full-Stack Web Developer.
+                  I began programming in 2015 with Python at Orange Coast College.
+                  I completed my Full-Stack Web Developer certification in April 2018.
+                  A gamer since a young age when every game had to be launched from DOS,
+                  my first interaction with programming was terminal commands.    
+                  </p>
+      
+                  <p>In the group projects that I have been a part of, the main area I worked on
+                  was back-end development. In my free time I have been learning C++ and the Unreal Engine.
+                  I hope to have a part in making video games, which I have been passionate about my whole life.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="block1" class="parallax-container">
+                <div class="parallax"><img src="bg.jpg"></div>
+            </div>
+
+    <footer class="page-footer green accent-1">
+        <div class="container">
+            <div class="row">
+            <div class="col l6 s6">
+                <h5 class="white-text">Tyler Sweeney</h5>
+                <p class="grey-text text-lighten-4"><img src="logo.png"></p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                <li><a class="grey-text text-lighten-3" href="/">Home</a></li>
+                <li><a class="grey-text text-lighten-3" href="portfolio">Portfolio</a></li>
+                <li><a class="grey-text text-lighten-3" href="about">About</a></li>
+                <li><a class="grey-text text-lighten-3" href="contact">Contact</a></li>
+                </ul>
+            </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+            © 2017 Tyler Sweeney
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+        </footer>
+                                                                        
