--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -69,7 +69,7 @@
             </div>
           </div> -->
           <div class="parallax-container">
-            <div class="parallax"><img src="planetExpress2.jpg"></div>
+            <div class="parallax"><img src="bg.png"></div>
           </div>
           <div class="section white">
                 <div class="row container">
@@ -77,7 +77,7 @@
     
                   <div class="row">
                       <div class="col s6">
-                  <img src="wearestillcool.gif">
+                  <a href="wearestillcool"><img src="wearestillcool.gif"></a>
                   </div>
                   <div class="s6">
                   <p class="grey-text text-darken-3 lighten-3">
@@ -106,7 +106,7 @@
         
                       <div class="row">
                           <div class="col s6">
-                      <img src="spaceballs.gif">
+                      <a href = "wearestillcool"><img src="spaceballs.gif"></a>
                       </div>
                       <div class="s6">
                       <p class="grey-text text-darken-3 lighten-3">
