change styling on wearestill cool route

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -69,7 +69,7 @@
             </div>
           </div> -->
           <div class="parallax-container">
-            <div class="parallax"><img src="bg.png"></div>
+            <div class="parallax"><img src="bg.jpg"></div>
           </div>
           <div class="section white">
                 <div class="row container">
