--- a/views/wearestillcool.ejs
+++ b/views/wearestillcool.ejs
@@ -31,10 +31,10 @@
         </div>
     
           <div id="block2" class="section white">
-                <iframe src="http://www.wearestillcool.com/" height="800" width="1200"></iframe>
+                <iframe id="stillCoolFrame" src="http://www.wearestillcool.com/" height="800" width="1200"></iframe>
             <div class="row container">
-              </div>
-                <div class="col s12">
+              
+                <div class="col s6">
 
 
 
@@ -45,15 +45,15 @@
                   A gamer since a young age when every game had to be launched from DOS,
                   my first interaction with programming was terminal commands.    
                   </p>
-      
+                  </div>
+                  <div class="col s6">
                   <p>In the group projects that I have been a part of, the main area I worked on
                   was back-end development. In my free time I have been learning C++ and the Unreal Engine.
                   I hope to have a part in making video games, which I have been passionate about my whole life.
                   </p>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
           <div id="block1" class="parallax-container">
                 <div class="parallax"><img src="bg.jpg"></div>
             </div>
