shrink parallax distance, darken header and footer fonts

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,10 +18,10 @@
         <div class="nav-wrapper green accent-1">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
           <ul class="left hide-on-med-and-down">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="portfolio">Portfolio</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="contact">Contact</a></li>
+            <li class="active"><a class="grey-text text-darken-3"href="/">Home</a></li>
+            <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
+            <li><a class="grey-text text-darken-3"href="about">About</a></li>
+            <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -140,7 +140,7 @@
           </div>
         </div>
         </div>
-    <div class="parallax-container">
+    <div id="block3" class="parallax-container">
         <div class="parallax"><img src="prog-bg.jpg"></div>
       </div>
     
@@ -148,24 +148,24 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s6">
-                <h5 class="white-text">Tyler Sweeney</h5>
-                <p class="grey-text text-lighten-4"><img src="logo.png"></p>
+                <h5 class="grey-text text-darken-3">Tyler Sweeney</h5>
+                <p class="grey-text text-darken-3"><img src="logo.png"></p>
               </div>
               <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
+                <h5 class="grey-text text-darken-3">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="/">Home</a></li>
-                  <li><a class="grey-text text-lighten-3" href="portfolio">Portfolio</a></li>
-                  <li><a class="grey-text text-lighten-3" href="about">About</a></li>
-                  <li><a class="grey-text text-lighten-3" href="contact">Contact</a></li>
+                  <li><a class="grey-text text-darken-3" href="/">Home</a></li>
+                  <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
+                  <li><a class="grey-text text-darken-3" href="about">About</a></li>
+                  <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2017 Tyler Sweeney
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+              <a class="grey-text text-darken-3">© 2017 Tyler Sweeney</a>
+            <a class="grey-text text-darken-3 right" href="#!">More Links</a>
             </div>
           </div>
         </footer>
