--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -77,7 +77,7 @@
     
                   <div class="row">
                       <div class="col s6">
-                  <a href="wearestillcool"><img src="wearestillcool.gif"></a>
+                  <a href="http://www.wearestillcool.com/" target="_blank"><img src="wearestillcool.gif"></a>
                   </div>
                   <div class="s6">
                   <p class="grey-text text-darken-3 lighten-3">
