shrink parallax size

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -74,7 +74,7 @@
       </div>
                                                                     
     <div class="parallax-container">
-      <div class="parallax"><img src="6screens.jpg"></div>
+      <div id="block4" class="parallax"><img src="6screens.jpg"></div>
     </div>
       <div class="section white">
           <div class="row container">
