add contact route and change footer text color to dark gray

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
           <ul class="left hide-on-med-and-down">
             <li class="active"><a class="grey-text text-darken-3"href="/">Home</a></li>
             <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
-            <li><a class="grey-text text-darken-3"href="about">About</a></li>
+            <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
             <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
           </ul>
         </div>
@@ -103,21 +103,24 @@
 
                 <div class="row">
 
-                <div class="col s2">
-                    <img id="tech" src="html5logo.png">
+                    <div class="col s2">
+                        <img class="tech" src="html5logo.png">
+                    </div>
+                    <div class="col s2">
+                        <img class="tech"src="csslogo.png">
+                    </div>
+                    <div class="col s2">
+                        <img class="tech"src="jslogo.png">
+                    </div>
                 </div>
-                <div class="col s2">
-                    <img id="tech"src="csslogo.png">
-                </div>
-                <div class="col s2">
-                    <img id="tech"src="jslogo.png">
-                </div>
-                <div class="col s2">
-                    <img id="tech"src="nodelogo.png">
-                </div>
-                <div class="col s2">
-                    <img id="tech"src="expresslogo.png">
-                </div>
+              <div class="row">
+
+                  <div class="col s2">
+                      <img id="tech"src="nodelogo.png">
+                  </div>
+                  <div class="col s2">
+                      <img id="tech"src="expresslogo.png">
+                  </div>
               </div>
             
             <div class="row">
