--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,92 +3,85 @@
     <head>
         <meta charset="utf-8">
         <title>Tyler J. Sweeney Portfolio</title>
-        <style>
-                body{
-                    background:#FFF3F4;
-                    font-family: arial;
-                    margin: 0;
-                }
-                nav{
-    
-                    background-image: url("https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX23894331.jpg");
-                    /* background: #53a575; */
-                    padding: 50px 10px 10px;
-                }
-                nav ul{
-                    max-width: 960px;
-                    margin: 10px 0px 0px 0px;
-                    padding: 0;
-                }
-                nav li{
-                    list-style-type: none;
-                    display: inline-block;
-                    position:left;
-                    margin: 10px 0px 10px 10px;
-                }
-                nav a{
-                    color: rgb(223, 222, 169);
-                    font-size: 20px;
-                    font-weight:bold;
-                    background: rgba(63,191,191,0.7);
-                    text-decoration: none;
-                    padding: 20px;
-                    /* display: inline; */
-                    
-                }
-                main, header{
-                    max-width: 960px;
-                    margin: 30px auto;
-                    padding: 0 10px;
-                    color: #333;
-                }
-                /* #logo{
-                    color:yellow;
-                    background: rgba(12,38,38,0.74);
-                    padding: 20px 10px;
-                    text-align: center;
-                    margin: 0 300px 0 300px;
-                } */
-                #container{
-                    background:white; 
-                    padding: 20px 10px;
-                    margin-left: 20%;
-                    margin-right: 20%;
-                    margin-top: 5%
-                }
-                #logoImg{
-                    max-width: 8%;
-                    height: auto;
-                    margin-left: 50%;
-                ;
-                    /* float: left; */
-                }
-            </style>
-    </head>
-    <body>
-
-        <nav>
-                <img id=logoImg src="./images/logo2.png" alt="logo">
-            <ul>
-                
-                <li><a href="/">Home</a></li>
-                <li><a href="/portfolio">Portfolio</a></li>
-                <li><a href="/contact">Contact</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-            
-        </nav>
-        <wrapper>
-                <div id=container>
-        <header>
-            <h1>Ways to get in contact with me</h1>
-            
-        </header>
-        <main>
-            <p>tjs@tylerjsweeney.com</p>
-            <p>(714) 501-6400</p>
-        </main>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" href="./styles.css" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="scripts.js"></script>
+</head>
+<body>
+    <nav>
+        <div class="nav-wrapper green accent-1">
+          <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
+          <ul class="left hide-on-med-and-down">
+            <li class="active"><a class="grey-text text-darken-3"href="/">Home</a></li>
+            <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
+            <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
+            <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
+          </ul>
         </div>
-        </wrapper>
+      </nav>
+
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Card Title</span>
+              <div class="row">
+                <form class="col s12">
+                  <div class="row">
+                    <div class="input-field col s6">
+                      <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                      <label for="first_name">First Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                      <input id="last_name" type="text" class="validate">
+                      <label for="last_name">Last Name</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+                      <label for="disabled">Disabled</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input id="password" type="password" class="validate">
+                      <label for="password">Password</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input id="email" type="email" class="validate">
+                      <label for="email">Email</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col s12">
+                      This is an inline input field:
+                      <div class="input-field inline">
+                        <input id="email_inline" type="email" class="validate">
+                        <label for="email_inline">Email</label>
+                        <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </body>
 </html>
