--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -18,56 +18,41 @@
         <div class="nav-wrapper green accent-1">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
           <ul class="left hide-on-med-and-down">
-            <li class="active"><a class="grey-text text-darken-3"href="/">Home</a></li>
+            <li><a class="grey-text text-darken-3"href="/">Home</a></li>
             <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
             <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
-            <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
+            <li class="active"><a class="grey-text text-darken-3"href="contact">Contact</a></li>
+            <li><a class="grey-text text-darken-3"href="resume">Resume</a></li>
           </ul>
         </div>
       </nav>
 
-      <div class="row">
+      <div  class="row">
         <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
+          <div id="contact" class="card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title">Card Title</span>
               <div class="row">
                 <form class="col s12">
-                  <div class="row">
+                  
+                    <div class="row">
                     <div class="input-field col s6">
-                      <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                      <input id="first_name" type="text" class="validate">
                       <label for="first_name">First Name</label>
                     </div>
+
                     <div class="input-field col s6">
                       <input id="last_name" type="text" class="validate">
                       <label for="last_name">Last Name</label>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="input-field col s12">
-                      <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-                      <label for="disabled">Disabled</label>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="input-field col s12">
-                      <input id="password" type="password" class="validate">
-                      <label for="password">Password</label>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="input-field col s12">
-                      <input id="email" type="email" class="validate">
-                      <label for="email">Email</label>
-                    </div>
-                  </div>
+
                   <div class="row">
                     <div class="col s12">
-                      This is an inline input field:
                       <div class="input-field inline">
                         <input id="email_inline" type="email" class="validate">
                         <label for="email_inline">Email</label>
-                        <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
+                        <span class="helper-text" data-error="wrong" data-success="right"></span>
                       </div>
                     </div>
                   </div>
