--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,6 +22,7 @@
             <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
             <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
             <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
+            <li><a class="grey-text text-darken-3"href="resume">Resume</a></li>
           </ul>
         </div>
       </nav>
@@ -47,7 +48,7 @@
         <div class="parallax"><img src="bg.jpg"></div>
     </div>
 
-      <div id="block2" class="section white">
+      <div class="section white">
         <div class="row container">
           <h2 class="header">About Me</h2>
           
