--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -22,26 +22,29 @@
             <li class="active"><a class="grey-text text-darken-3"href="portfolio">Portfolio</a></li>
             <!-- <li><a href="about">About</a></li> -->
             <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
+            <li><a class="grey-text text-darken-3"href="resume">Resume</a></li>
           </ul>
         </div>
       </nav>
   <!-- Element Showed -->
   <!-- need to make it obvious that this  -->
   <div class="fixed-action-btn direction-top active" style="bottom: 45px; right: 24px;">
-        <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i class="material-icons">email</i></a>">
-          
-        </a>
-      </div>  <!-- Tap Target Structure -->
-  <div class="tap-target" data-target="email">
-    <div class="tap-target-content">
-      <h5>Contact Info</h5>
-      <p>tylersweeney@gmail.com</p>
-      <p>(714) 501-6400</p>
-      <a href="https://github.com/tylersweeney"><img src="assets/images/github128.png" class="social" alt="Github"></a>
-      <img src="assets/images/linkedin128.png" class="social" alt="LinkedIn">
-      <img src="assets/images/stackoverflow128.png" class="social" alt="Stack Overflow">
-    </div>
-  </div>
+    <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i class="material-icons">email</i></a>
+      
+    </a>
+  </div>  <!-- Tap Target Structure -->
+<div class="tap-target" data-target="email">
+<div class="tap-target-content">
+  <h5>Contact Info</h5>
+  <p>tylersweeney@gmail.com</p>
+  <p>(714) 501-6400</p>
+  <i class="material-icons">public</i><a href="https://github.com/tylersweeney">Github</a>
+  <br>
+  <i class="material-icons">assignment_ind</i><a href="https://www.linkedin.com/in/tylerjsweeney/">LinkedIn</a>
+  <br>
+  <i class="material-icons">equalizer</i><a href="https://stackoverflow.com/users/8525667/tyler-sweeney">Stack Overflow</a>
+</div>
+</div>
 
      
   <!-- <div id="block1"class="parallax-container">
@@ -68,7 +71,7 @@
               </div>
             </div>
           </div> -->
-          <div class="parallax-container">
+          <div id="block1" class="parallax-container">
             <div class="parallax"><img src="bg.jpg"></div>
           </div>
           <div class="section white">
@@ -96,7 +99,7 @@
                   </div>
                 </div>
               </div>
-              <div class="parallax-container">
+              <div id="block2" class="parallax-container">
                 <div class="parallax"><img src="kids_birthdayparty1024.jpg"></div>
               </div>
 
@@ -119,7 +122,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="parallax-container">
+                  <div id="block2" class="parallax-container">
                     <div class="parallax"><img src="SBintro559.gif"></div>
                   </div>
 
@@ -141,7 +144,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="parallax-container">
+                      <div id="block2" class="parallax-container">
                         <div class="parallax"><img src="beermepar.jpg"></div>
                       </div>
 
@@ -163,7 +166,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="parallax-container">
+                          <div id="block2" class="parallax-container">
                             <div class="parallax"><img src="lake.jpg"></div>
                           </div>                                
                             
@@ -180,7 +183,6 @@
         <ul>
           <li><a class="grey-text text-darken-3" href="/">Home</a></li>
           <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
-          <li><a class="grey-text text-darken-3" href="about">About</a></li>
           <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
         </ul>
       </div>
@@ -189,7 +191,6 @@
   <div class="footer-copyright">
     <div class="container">
       <a class="grey-text text-darken-3">© 2017 Tyler Sweeney</a>
-    <a class="grey-text text-darken-3 right" href="#!">More Links</a>
     </div>
   </div>
 </footer>
