add google site verification

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="google-site-verification" content="yy7qgtwyIga6CKVPJcl_ESmGidnjRII4IKxVFOwa-ho" />
         <title>Tyler J. Sweeney Portfolio</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="./styles.css" type="text/css">
@@ -13,16 +14,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="scripts.js"></script>
 </head>
+
 <body>
     <nav>
-        <div class="nav-wrapper green accent-1">
+        <div class="nav-wrapper">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
           <ul class="left hide-on-med-and-down">
-            <li class="active"><a class="grey-text text-darken-3"href="/">Home</a></li>
-            <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
-            <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
-            <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
-            <li><a class="grey-text text-darken-3"href="resume">Resume</a></li>
+            <li class="active"><a class="grey-text text-darken-3" href="portfolio">Home</a></li>
+            <!-- <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li> -->
+            <li><a class="grey-text text-darken-3" href="about">About</a></li>
+            <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
+            <li><a class="grey-text text-darken-3" href="resume">Resume</a></li>
           </ul>
         </div>
       </nav>
@@ -85,16 +87,10 @@
             </div>
               <div class="col s6">
                 <p id="about" class="grey-text text-darken-3 lighten-3">
-                My name is Tyler Sweeney and I am a Full-Stack Web Developer.
-                I began programming in 2015 with Python at Orange Coast College.
-                I completed my Full-Stack Web Developer certification in April 2018.
-                A gamer since a young age when every game had to be launched from DOS,
-                my first interaction with programming was terminal commands.    
+                   
                 </p>
     
-                <p>In the group projects that I have been a part of, the main area I worked on
-                was back-end development. In my free time I have been learning C++ and the Unreal Engine.
-                I hope to have a part in making video games, which I have been passionate about my whole life.
+                <p>
                 </p>
               </div>
              
