format porfolio page code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,24 +65,23 @@
           </div>
           <div class="col s6">
             <p id="about" class="grey-text text-darken-3 lighten-3">
-              I am a full-stack web developer. I have 3 years experience building full application front to back.
-              I specialize in MERN stack builds, but am experienced in many coding languages.
-              I also have experience with SEO and online advertising.
+                My name is Tyler Sweeney and I am a Full-Stack Web Developer.I have 3 years experience 
+                building full application front to back. I specialize in MERN stack builds, but am 
+                experienced in many coding languages. I also have experience with SEO and online advertising.
             </p>
             <br>
             <br>
             <p>
-              My name is Tyler Sweeney and I am a Full-Stack Web Developer.
-              I began programming in 2015 with Python at Orange Coast College.
+              I began programming in 2015 with two Python classes at Orange Coast College.
               I completed my Full-Stack Web Developer certification in April 2018.
               A gamer since a young age when every game had to be launched from DOS,
               my first interaction with programming was terminal commands.
             </p>
             <br>
             <br>
-            <p>In the group projects that I have been a part of, the main area I worked on
-              was back-end development. In my free time I have been learning C++ and the Unreal Engine.
-              I hope to have a part in making video games, which I have been passionate about my whole life.
+            <p>In my free time I have been learning C++ and the Unreal Engine.
+              Industries that I am passionate about being a part of are Gaming, Music, Entertainment,
+              Business, Real Estate, and Sports.
             </p>
             <br>
             <br>
@@ -91,13 +90,13 @@
                           <div class="col s12 m6">
                             <div class="card blue-grey darken-1">
                               <div class="card-content white-text">
-                                <span class="card-title">Card Title</span>
-                                <p>I am a very simple card. I am good at containing small bits of information.
-                                  I am convenient because I require little markup to use effectively.</p>
+                                <span class="card-title">Group Projects</span>
+                                <p>In the group projects that I have been a part of, the main area I worked on
+                                    was back-end development.</p>
                               </div>
                               <div class="card-action">
-                                <a href="#">This is a link</a>
-                                <a href="#">This is a link</a>
+                                <!-- <a href="#">This is a link</a>
+                                <a href="#">This is a link</a> -->
                               </div>
                             </div>
                           </div>
@@ -105,13 +104,15 @@
                           <div class="col s12 m6">
                             <div class="card blue-grey darken-1">
                               <div class="card-content white-text">
-                                <span class="card-title">Card Title</span>
-                                <p>I am a very simple card. I am good at containing small bits of information.
-                                  I am convenient because I require little markup to use effectively.</p>
+                                <span class="card-title">A little more about Me</span>
+                                <p>Outside of programming, surfing is something I love doing. I have even
+                                  made some short surf videos. I am not great at surfing, but I have a lot of
+                                  fun doing it.
+                                </p>
                               </div>
                               <div class="card-action">
-                                <a href="#">This is a link</a>
-                                <a href="#">This is a link</a>
+                                <a href="https://www.youtube.com/watch?v=D6NSaS_yZqc">Surf Vid</a>
+                                <!-- <a href="#">This is a link</a> -->
                               </div>
                             </div>
                           </div>
