--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Tyler J. Sweeney Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" href="./styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="scripts.js"></script>
+
+<head>
+  <meta charset="utf-8">
+  <title>Tyler J. Sweeney Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" href="./styles.css" type="text/css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+  <script src="scripts.js"></script>
 </head>
+
 <body>
-    <nav>
-        <div class="nav-wrapper green accent-1">
-          <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
-          <ul class="left hide-on-med-and-down">
-            <li><a class="grey-text text-darken-3" href="/">Home</a></li>
-            <li class="active"><a class="grey-text text-darken-3"href="portfolio">Portfolio</a></li>
-            <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
-            <li><a class="grey-text text-darken-3"href="resume">Resume</a></li>
-          </ul>
-        </div>
-      </nav>
+  <nav>
+    <div class="nav-wrapper green accent-1">
+      <a href="/" class="brand-logo center"><img id="logo" src="logo.png"></a>
+      <ul class="left hide-on-med-and-down">
+        <li><a class="grey-text text-darken-3" href="/">Home</a></li>
+        <li class="active"><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
+        <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
+        <li><a class="grey-text text-darken-3" href="resume">Resume</a></li>
+      </ul>
+    </div>
+  </nav>
   <!-- Element Showed -->
   <!-- need to make it obvious that this  -->
   <div class="fixed-action-btn direction-top active" style="bottom: 45px; right: 24px;">
-    <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i class="material-icons">email</i></a>
-      
-    </a>
-  </div>  <!-- Tap Target Structure -->
-<div class="tap-target" data-target="email">
-<div class="tap-target-content">
-  <h5>Contact Info</h5>
-  <p>tylersweeney@gmail.com</p>
-  <p>(714) 501-6400</p>
-  <i class="material-icons">public</i><a href="https://github.com/tylersweeney">Github</a>
-  <br>
-  <i class="material-icons">assignment_ind</i><a href="https://www.linkedin.com/in/tylerjsweeney/">LinkedIn</a>
-  <br>
-  <i class="material-icons">equalizer</i><a href="https://stackoverflow.com/users/8525667/tyler-sweeney">Stack Overflow</a>
-</div>
-</div>
+    <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i
+        class="material-icons">email</i></a>
 
-     
+    </a>
+  </div> <!-- Tap Target Structure -->
+  <div class="tap-target" data-target="email">
+    <div class="tap-target-content">
+      <h5>Contact Info</h5>
+      <p>tylersweeney@gmail.com</p>
+      <p>(714) 501-6400</p>
+      <i class="material-icons">public</i><a href="https://github.com/tylersweeney">Github</a>
+      <br>
+      <i class="material-icons">assignment_ind</i><a href="https://www.linkedin.com/in/tylerjsweeney/">LinkedIn</a>
+      <br>
+      <i class="material-icons">equalizer</i><a href="https://stackoverflow.com/users/8525667/tyler-sweeney">Stack
+        Overflow</a>
+    </div>
+  </div>
+
+
   <!-- <div id="block1"class="parallax-container">
             <div class="parallax">Projects and Designs<img src="bg.jpg"></div>
           </div>
@@ -70,129 +75,129 @@
               </div>
             </div>
           </div> -->
-          <div id="block1" class="parallax-container">
-            <div class="parallax"><img src="bg.jpg"></div>
-          </div>
-          <div class="section white">
-                <div class="row container">
-                  <h2 class="header">We Are Still Cool App</h2>
-    
-                  <div class="row">
-                      <div class="col s6">
-                  <a href="http://www.wearestillcool.com/" target="_blank"><img src="wearestillcool.gif"></a>
-                  </div>
-                  <div class="s6">
-                  <p class="grey-text text-darken-3 lighten-3">
-                    This is a medium sized social app/website. It has authenticatic login, profiles,
-                    forums, product reviews, and meetups.
+  <div id="block1" class="parallax-container">
+    <div class="parallax"><img src="bg.jpg"></div>
+  </div>
+  <div class="section white">
+    <div class="row container">
+      <h2 class="header">We Are Still Cool App</h2>
 
-                    Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
+      <div class="row">
+        <div class="col s6">
+          <a href="http://www.wearestillcool.com/" target="_blank"><img src="wearestillcool.gif"></a>
+        </div>
+        <div class="s6">
+          <p class="grey-text text-darken-3 lighten-3">
+            This is a medium sized social app/website. It has authenticatic login, profiles,
+            forums, product reviews, and meetups.
 
-                    What did I gain, demonstrate or learn from this project
+            Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
 
-                    group size
-  
-                    timeframe, deadline
-                  </p>
-                  </div>
-                  </div>
-                </div>
-              </div>
-              <div id="block2" class="parallax-container">
-                <div class="parallax"><img src="kids_birthdayparty1024.jpg"></div>
-              </div>
+            What did I gain, demonstrate or learn from this project
 
-              <div class="section white">
-                    <div class="row container">
-                      <h2 class="header">Space Balls: The RPG</h2>
-        
-                      <div class="row">
-                          <div class="col s6">
-                      <a href = "wearestillcool"><img src="spaceballs.gif"></a>
-                      </div>
-                      <div class="s6">
-                      <p class="grey-text text-darken-3 lighten-3">
-                        This is another game from the class that I revisited. Adding animations
-                        and opacity tags and a general redesign from the original
-    
-                        Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
-                      </p>
-                      </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div id="block2" class="parallax-container">
-                    <div class="parallax"><img src="SBintro559.gif"></div>
-                  </div>
+            group size
 
-                  <div class="section white">
-                        <div class="row container">
-                          <h2 class="header">Beer Me App</h2>
-            
-                          <div class="row">
-                              <div class="col s6">
-                          <img src="beerme.gif">
-                          </div>
-                          <div class="s6">
-                          <p class="grey-text text-darken-3 lighten-3">
-                            This was our first group project. This is a fun social app that uses facial
-                            recognition to suggest a beer based on detected emotion and suggests a brewery 
-                            nearby that serves said beer
-                          </p>
-                          </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div id="block2" class="parallax-container">
-                        <div class="parallax"><img src="beermepar.jpg"></div>
-                      </div>
-
-                      <div class="section white">
-                            <div class="row container">
-                              <h2 class="header">Train Time App</h2>
-                
-                              <div class="row">
-                                  <div class="col s6">
-                              <img src="traintime.gif">
-                              </div>
-                              <div class="s6">
-                              <p class="grey-text text-darken-3 lighten-3">
-                                This is a database app that takes a user input, stores it
-                                in the database using firebase and displays the data in
-                                a table.
-                              </p>
-                              </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div id="block2" class="parallax-container">
-                            <div class="parallax"><img src="lake.jpg"></div>
-                          </div>                                
-                            
-                            </div>
-<footer class="page-footer green accent-1">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s6">
-        <h5 class="grey-text text-darken-3">Tyler Sweeney</h5>
-        <p class="grey-text text-darken-3"><img src="logo.png"></p>
-      </div>
-      <div class="col l4 offset-l2 s12">
-        <h5 class="grey-text text-darken-3">Links</h5>
-        <ul>
-          <li><a class="grey-text text-darken-3" href="/">Home</a></li>
-          <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
-          <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
-        </ul>
+            timeframe, deadline
+          </p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="footer-copyright">
+  <div id="block2" class="parallax-container">
+    <div class="parallax"><img src="kids_birthdayparty1024.jpg"></div>
+  </div>
+
+  <div class="section white">
+    <div class="row container">
+      <h2 class="header">Space Balls: The RPG</h2>
+
+      <div class="row">
+        <div class="col s6">
+          <a href="wearestillcool"><img src="spaceballs.gif"></a>
+        </div>
+        <div class="s6">
+          <p class="grey-text text-darken-3 lighten-3">
+            This is another game from the class that I revisited. Adding animations
+            and opacity tags and a general redesign from the original
+
+            Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="block2" class="parallax-container">
+    <div class="parallax"><img src="SBintro559.gif"></div>
+  </div>
+
+  <div class="section white">
+    <div class="row container">
+      <h2 class="header">Beer Me App</h2>
+
+      <div class="row">
+        <div class="col s6">
+          <img src="beerme.gif">
+        </div>
+        <div class="s6">
+          <p class="grey-text text-darken-3 lighten-3">
+            This was our first group project. This is a fun social app that uses facial
+            recognition to suggest a beer based on detected emotion and suggests a brewery
+            nearby that serves said beer
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="block2" class="parallax-container">
+    <div class="parallax"><img src="beermepar.jpg"></div>
+  </div>
+
+  <div class="section white">
+    <div class="row container">
+      <h2 class="header">Train Time App</h2>
+
+      <div class="row">
+        <div class="col s6">
+          <img src="traintime.gif">
+        </div>
+        <div class="s6">
+          <p class="grey-text text-darken-3 lighten-3">
+            This is a database app that takes a user input, stores it
+            in the database using firebase and displays the data in
+            a table.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="block2" class="parallax-container">
+    <div class="parallax"><img src="lake.jpg"></div>
+  </div>
+
+  </div>
+  <footer class="page-footer green accent-1">
     <div class="container">
-      <a class="grey-text text-darken-3">© 2017 Tyler Sweeney</a>
+      <div class="row">
+        <div class="col l6 s6">
+          <h5 class="grey-text text-darken-3">Tyler Sweeney</h5>
+          <p class="grey-text text-darken-3"><img src="logo.png"></p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="grey-text text-darken-3">Links</h5>
+          <ul>
+            <li><a class="grey-text text-darken-3" href="/">Home</a></li>
+            <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
+            <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
-</footer>
+    <div class="footer-copyright">
+      <div class="container">
+        <a class="grey-text text-darken-3">© 2017 Tyler Sweeney</a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
