--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,7 +56,7 @@
     <div class="parallax"><img src="bg.jpg"></div>
   </div>
     <!-- About Me Section -->
-    <div class="section white">
+    <div class="section teal lighten-5">
       <div class="row container">
         <h2 class="header">About Me</h2>
         <div class="row">
@@ -126,7 +126,7 @@
       <div class="parallax"><img src="bg.jpg"></div>
     </div>
     <!-- Graduation Section -->
-    <div class="section white">
+    <div class="section teal lighten-5">
       <div class="row container">
         <h2 class="header">Graduating</h2>
           <div class="row">
@@ -172,7 +172,6 @@
     <div class="footer-copyright">
       <div class="container">
         <a class="grey-text text-darken-3">© 2017 Tyler Sweeney</a>
-        <a class="grey-text text-darken-3 right" href="#!">More Links</a>
       </div>
     </div>
   </footer>
