--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -27,9 +27,11 @@
         </div>
       </nav>
 
+<div class="container">
+    <embed src="../public/resume.pdf" type="application/pdf" width="100%" height="600px">
+</div>
+      <!-- <iframe id="resume" height="1000" width="1000" src="https://docs.google.com/document/d/e/2PACX-1vRh2VHhj5IJ7SSupW_86Mf2VUHj7EcWGSiMQXopOHXzFLkGwdZDHIq_sw3sExP0IXldnxQba-NY52pJ/pub?embedded=true"></iframe> -->
 
-      <iframe id="resume" width="900" height="900"src="https://docs.google.com/document/d/e/2PACX-1vQdK_uVVMHQAaCLXo-5GJPKgrqBQ3WoAWgcirgNu2Ye1miUwwwWT9ZRw_BB-ZeoUfiJ679HL4QORuHo/pub?embedded=true"></iframe>
-      
 
 
     </body>
