--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -27,10 +27,10 @@
         </div>
       </nav>
 
-<div class="container">
+<!-- <div class="container">
     <embed src="../public/resume.pdf" type="application/pdf" width="100%" height="600px">
-</div>
-      <!-- <iframe id="resume" height="1000" width="1000" src="https://docs.google.com/document/d/e/2PACX-1vRh2VHhj5IJ7SSupW_86Mf2VUHj7EcWGSiMQXopOHXzFLkGwdZDHIq_sw3sExP0IXldnxQba-NY52pJ/pub?embedded=true"></iframe> -->
+</div> -->
+      <iframe id="resume" height="1000" width="1000" src="https://docs.google.com/document/d/e/2PACX-1vRh2VHhj5IJ7SSupW_86Mf2VUHj7EcWGSiMQXopOHXzFLkGwdZDHIq_sw3sExP0IXldnxQba-NY52pJ/pub?embedded=true"></iframe>
 
 
 
