change parallax bg image again

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -146,8 +146,8 @@
       </div>
     </div>
   <!-- Bottom Parallax -->
-  <div id="block3" class="parallax-container">
-      <div class="parallax"><img src="prog-bg.jpg"></div>
+  <div id="block1" class="parallax-container">
+    <div class="parallax"><img src="bg.jpg"></div>
   </div>
 
   <!-- Footer Bar -->
