--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -75,34 +75,79 @@
               </div>
             </div>
           </div> -->
+
+  <!-- First Parallax -->
   <div id="block1" class="parallax-container">
     <div class="parallax"><img src="bg.jpg"></div>
   </div>
   <div class="section white">
     <div class="row container">
-      <h2 class="header">We Are Still Cool App</h2>
-
+      <h2 class="header">Group Projects</h2>
       <div class="row">
-        <div class="col s6">
-          <a href="http://www.wearestillcool.com/" target="_blank"><img src="wearestillcool.gif"></a>
-        </div>
-        <div class="s6">
-          <p class="grey-text text-darken-3 lighten-3">
-            This is a medium sized social app/website. It has authenticatic login, profiles,
-            forums, product reviews, and meetups.
+        <div class="col s12">
 
-            Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
-
-            What did I gain, demonstrate or learn from this project
-
-            group size
-
-            timeframe, deadline
-          </p>
+          <!-- Group Project #1 Card -->
+          <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="wearestillcool.gif">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">We Are Still Cool<i class="material-icons right">more_vert</i></span>
+                <p><a href="#">We Are Still Cool</a></p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">We Are Still Cool<i class="material-icons right">close</i></span>
+                <p>Lead a group of 4 to design a social media site for Parents. Medium sized social app/website. It has authenticatic login, profiles,
+                    forums, product reviews, and meetups.
+        
+                    Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
+        
+                    What did I gain, demonstrate or learn from this project
+        
+                    group size
+        
+                    timeframe, deadline</p>
+              </div>
+            </div>
+            <!-- Group Project #2 Card -->
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img class="activator" src="beerme.gif">
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4">Mood Brews<i class="material-icons right">more_vert</i></span>
+                  <p><a href="#">Mood Brews</a></p>
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4">Mood Brews<i class="material-icons right">close</i></span>
+                  <p>This was our first group project. This is a fun social app that uses facial
+                      recognition to suggest a beer based on detected emotion and suggests a brewery
+                      nearby that serves said beer</p>
+                </div>
+              </div>
         </div>
       </div>
     </div>
   </div>
+  <!-- section for the we are still cool app -->
+  <!-- <div class="section white">
+    <div class="row container">
+      <h2 class="header">We Are Still Cool App</h2>
+
+      <div class="row">
+        <div class="col s12">
+          <a href="http://www.wearestillcool.com/" target="_blank"><img src="wearestillcool.gif"></a>
+        </div>
+        <div class="s6">
+          <p class="grey-text text-darken-3 lighten-3">
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- Second Parallax Section -->
   <div id="block2" class="parallax-container">
     <div class="parallax"><img src="kids_birthdayparty1024.jpg"></div>
   </div>
@@ -112,7 +157,7 @@
       <h2 class="header">Space Balls: The RPG</h2>
 
       <div class="row">
-        <div class="col s6">
+        <div class="col s12">
           <a href="wearestillcool"><img src="spaceballs.gif"></a>
         </div>
         <div class="s6">
@@ -135,7 +180,7 @@
       <h2 class="header">Beer Me App</h2>
 
       <div class="row">
-        <div class="col s6">
+        <div class="col s12">
           <img src="beerme.gif">
         </div>
         <div class="s6">
@@ -157,7 +202,7 @@
       <h2 class="header">Train Time App</h2>
 
       <div class="row">
-        <div class="col s6">
+        <div class="col s12">
           <img src="traintime.gif">
         </div>
         <div class="s6">
@@ -178,7 +223,7 @@
   <footer class="page-footer green accent-1">
     <div class="container">
       <div class="row">
-        <div class="col l6 s6">
+        <div class="col l6 s12">
           <h5 class="grey-text text-darken-3">Tyler Sweeney</h5>
           <p class="grey-text text-darken-3"><img src="logo.png"></p>
         </div>
