convert sections into cards for easier reading

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -148,13 +148,13 @@
   </div> -->
 
   <!-- Second Parallax Section -->
-  <div id="block2" class="parallax-container">
-    <div class="parallax"><img src="kids_birthdayparty1024.jpg"></div>
+  <div id="block1" class="parallax-container">
+    <div class="parallax"><img src="bg.jpg"></div>
   </div>
 
   <div class="section white">
     <div class="row container">
-      <h2 class="header">Space Balls: The RPG</h2>
+      <h2 class="header">Javascript Games</h2>
 
       <div class="row">
         <div class="col s12">
@@ -171,11 +171,8 @@
       </div>
     </div>
   </div>
-  <div id="block2" class="parallax-container">
-    <div class="parallax"><img src="SBintro559.gif"></div>
-  </div>
 
-  <div class="section white">
+  <!-- <div class="section white">
     <div class="row container">
       <h2 class="header">Beer Me App</h2>
 
@@ -192,16 +189,33 @@
         </div>
       </div>
     </div>
-  </div>
-  <div id="block2" class="parallax-container">
-    <div class="parallax"><img src="beermepar.jpg"></div>
+  </div> -->
+
+  <!-- Third Parallax Section -->
+  <div id="block1" class="parallax-container">
+    <div class="parallax"><img src="bg.jpg"></div>
   </div>
 
   <div class="section white">
     <div class="row container">
-      <h2 class="header">Train Time App</h2>
+      <h2 class="header">Database Applications</h2>
 
-      <div class="row">
+      <!-- Database Card -->
+      <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="traintime.gif">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+            <p><a href="#">Train Times in Firebase</a></p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+            <p>This is a database app that takes a user input, stores it in the database using firebase and displays the data in a table.</p>
+          </div>
+        </div>
+
+      <!-- <div class="row">
         <div class="col s12">
           <img src="traintime.gif">
         </div>
@@ -212,11 +226,12 @@
             a table.
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
-  <div id="block2" class="parallax-container">
-    <div class="parallax"><img src="lake.jpg"></div>
+  <div id="block1" class="parallax-container">
+    <div class="parallax"><img src="bg.jpg
+    "></div>
   </div>
 
   </div>
