add links to portfolio projects

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -128,23 +128,57 @@
     <!-- Graduation Section -->
     <div class="section teal lighten-5">
       <div class="row container">
-        <h2 class="header">Graduating</h2>
+
+
+          <!-- Grid for learned technologies -->
           <div class="row">
-            <div class="col s6">
-              <img id="grad2" src="grad2.png">
-            </div> 
-            <div class="col s6">
-              <img id="grad" src="grad.png">
-              <br>
-              <br>
-              <p>The Coding Bootcamp at University of California, Irvine Division of Continuing Education
-                was a 6 month intensive course spanning 240 hours of instruction and covering the lastest
-                industry standard technical skills.
-              </p>
+                 <div class="col s2">
+                     <img class="tech" src="html5logo.png">
+                 </div>
+                 <div class="col s2">
+                     <img class="tech"src="csslogo.png">
+                 </div>
+                 <div class="col s2">
+                     <img class="tech"src="jslogo.png">
+                 </div>
+                 <div class="col s6">
+                   <img src="grad.png">
+                </div>
             </div>
-          </div>
+
+           <div class="row">
+                <div class="col s2">
+                   <img id="tech"src="nodelogo.png">
+               </div>
+               <div class="col s2">
+                   <img id="tech"src="expresslogo.png">
+               </div>
+               <div class="col s2">
+                  <img id="tech"src="mongodblogo.png">
+              </div>
+           </div>
+        </div>
+
+        <!-- Non-Grid display for learned technologies -->
+          <!-- <h2 class="header">Graduating</h2>
+            <div class="row">
+              <div class="col s6">
+                <img id="grad2" src="grad2.png">
+              </div> 
+              <div class="col s6">
+                <img id="grad" src="grad.png">
+                <br>
+                <br>
+                <p>The Coding Bootcamp at University of California, Irvine Division of Continuing Education
+                  was a 6 month intensive course spanning 240 hours of instruction and covering the lastest
+                  industry standard technical skills.
+                </p>
+              </div>
+            </div> -->
       </div>
     </div>
+
+
   <!-- Bottom Parallax -->
   <div id="block1" class="parallax-container">
     <div class="parallax"><img src="bg.jpg"></div>
