--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -93,7 +93,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">We Are Still Cool<i class="material-icons right">more_vert</i></span>
-                <p><a href="#">We Are Still Cool</a></p>
+                <p><a href="http://www.wearestillcool.com/">We Are Still Cool</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">We Are Still Cool<i class="material-icons right">close</i></span>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title activator grey-text text-darken-4">Mood Brews<i class="material-icons right">more_vert</i></span>
-                  <p><a href="#">Mood Brews</a></p>
+                  <p><a href="https://blooming-fortress-74085.herokuapp.com/">Mood Brews</a></p>
                 </div>
                 <div class="card-reveal">
                   <span class="card-title grey-text text-darken-4">Mood Brews<i class="material-icons right">close</i></span>
